--- a/profile.html
+++ b/profile.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
+    <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="imagenes/juan_mostacho.png">
     <script type=module src=main.js></script>
-    <my-header></my-header>
+    
 </head>
-
+<my-header></my-header>
 <body>
 
 <my-footer></my-footer>
