--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Work+Sans:wght@300;400&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="imagenes/juan_mostacho.png"> 
     <script type=module src=main.js></script>
-    <my-header></my-header>
+    
 </head>
-
+<my-header></my-header>
 <body>
     <a href="profile.html">
         <button class="btn btn-primary btn-lg">Perfil</button>
