--- a/profile.html
+++ b/profile.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Work+Sans:wght@300;400&display=swap" rel="stylesheet">
     <title>Perfil</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="imagenes/juan_mostacho.png">
@@ -12,7 +16,8 @@
 </head>
 <my-header></my-header>
 <body>
+<h1>Probando Probando 123</h1>
 
-<my-footer></my-footer>
 </body>
+<my-footer></my-footer>
 </html>
