Cambios con lso boxes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     <a href="profile.html">
         <button class="btn btn-primary btn-lg">Perfil</button>
     </a>
+    <h1>Usuarios destacados de la semana: </h1>
+    <div class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        
+    </div>
     
+    <h1>Preguntas de la semana: </h1>
 </body>
 <my-footer></my-footer>
 
