Profile_UserInfo - HTML

--- a/profile.html
+++ b/profile.html
@@ -15,9 +15,57 @@
     
 </head>
 <my-header></my-header>
-<body>
-<h1>Probando Probando 123</h1>
 
-</body>
+<div class="info">
+    <div class="personal_data">
+        <div clas="user_info">
+            <div class="profile_pic"></div>
+            <div class="username">
+                <div class="name"></div>
+                <div class="user"></div>
+                <div class="rank"></div>
+            </div>
+            <button class="edit_profile">Editar Perfil</button>
+            <button class="edit_bio">Editar Bio</button>
+        </div>
+        <a class="github">
+            <div>
+                <span class="logo"></span>
+                <span class="link">
+                    <div class="github_user">prueba</div>
+                </span>
+            </div>
+        </a>
+        <a class="linkedin">
+            <div>
+                <span class="logo"></span>
+                <span class="link">
+                    <div class="linkedin_user">prueba</div>
+                </span>
+            </div>
+        </a>
+    </div>
+    <div class="community_activity">
+        <h3>Comunidad</h3>
+        <div class="community">
+            <div class="forum">
+                Participación en el foro
+                <div class="entries"></div>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="languages">
+        <h3>Lenguajes aprendidos</h3>
+        No data
+    </div>
+    <hr>
+    <div class="skills">
+        <h3>Habilidades</h3>
+        No data
+    </div>
+
+</div>
+
 <my-footer></my-footer>
 </html>
