Detailed_Progress - HTML&CSS

--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
 
 <div class="info">
     <div class="personal_data">
-        <div clas="user_info">
+        <div>
             <div class="profile_pic">
                 <img src="imagenes/kittyProfile.jpg" alt="user">
             </div>
@@ -56,7 +56,7 @@
     </div>
     <div class="web_activity">
         <div class="community_activity">
-            <h3>Comunidad</h3>
+            <div class="title">Comunidad</div>
             <div class="community">
                 <div class="forum">
                     Participación en el foro
@@ -66,15 +66,38 @@
         </div>
         <hr>
         <div class="languages">
-            <h3>Lenguajes aprendidos</h3>
+            <div class="title">Lenguaje aprendidos</div>
             No data
         </div>
         <hr>
         <div class="skills">
-            <h3>Habilidades</h3>
+            <div class="title">Habilidades</div>
             No data
         </div>
     </div>
+</div>
+<div class="detailed_progress">
+    <div class="title" id="titleProblems">Problemas resueltos</div>
+    <div class="courses">
+        <div id="courseOne">
+            <div class="titleCourse">Introducción a los algoritmos</div>
+            <div class="progress" >0%</div>
+        </div>
+        <div id="courseTwo">
+            <div class="titleCourse">Algoritmos</div>
+            <div class="progress" >0%</div>
+        </div>
+        <div id="courseThree">
+            <div class="titleCourse">Algoritmos y <br>
+                Estructuras de Datos</div>
+            <div class="progress" >0%</div>
+        </div>
+        <div id="courseFour">
+            <div class="titleCourse">Complejidad Algorítmica</div>
+            <div class="progress" >0%</div>
+        </div>
+    </div>
+
 </div>
 
 <my-footer></my-footer>
