Global_Progress - HTML

--- a/profile.html
+++ b/profile.html
@@ -99,6 +99,13 @@
     </div>
 
 </div>
-
+<div class="general_progress">
+    <div id="titleGProgress" class="title">Progreso Global</div>
+    <div class="progressG">
+        <div class="circular_progress">
+            <span class="progress-value">0%</span>
+        </div>
+    </div>
+</div>
 <my-footer></my-footer>
 </html>
