Profile_Entries - HTML

--- a/profile.html
+++ b/profile.html
@@ -107,5 +107,25 @@
         </div>
     </div>
 </div>
+<div class="forum-entries">
+    <div id="entriesTitle" class="title">Entradas en el foro</div>
+    <div class="group_entries">
+        <ul>
+            <li>
+                <div id="entry1" class="entries">Guardar palabras por separado</div>
+                <div class="time">Hace 4 horas</div>
+            </li>
+            <li>
+                <div id="entry2" class="entries">Contar letras/palabras en C++</div>
+                <div class="time">Hace 2 días</div>
+            </li>
+            <li>
+                <div id="entry2" class="entries">¿Cómo trabajar un menú con clases, objetos y arrays char?</div>
+                <div class="time">Hace 10 días</div>
+            </li>
+        </ul>
+    </div>
+
+</div>
 <my-footer></my-footer>
 </html>
